Start the HTML structure
Install Bootstrap, html structure of index.html and produit.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,108 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>.</title>   
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" sizes="144x144" href="./images/favicon.png">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css">
+
+
+    <title>Orinoco</title>  
 </head>
 
 <body>
+<header class="container-fluid bg-primary">
+    <div class="row">
+        <nav class="col navbar navbar-light mx-md-4">
+            <a class="navbar-brand" href="index.html">
+                <img src="./images/logo-orinoco.png" alt="Site logo" width="200" height="95">
+            </a>
+             <div id="navbarContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="panier.html">Panier</a>
+                    </li>
+                </ul>
+             </div>
+        </nav> 
+    </div>
+</header>
+
+
+<div class="container my-5">
+    <div class="row">
+        <div class="col-12 col-lg-4 mb-4">
+            <div class="card h-100 text-center px-auto border-primary shadow">
+                <img  class="card-img-top" src="./images/cameras/vcam_1.jpg" alt="Camera">
+                <div class="card-body">
+                   <h5 class="card-title">Camera Name</h5>
+                   <p class="card-text">Camera description</p>
+                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-4">
+            <div class="card h-100 text-center border-primary shadow">
+                <img  class="card-img-top" src="./images/cameras/vcam_2.jpg" alt="Camera">
+                <div class="card-body">
+                   <h5 class="card-title">Camera Name</h5>
+                   <p class="card-text">Camera description</p>
+                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-4">
+            <div class="card h-100 text-center border-primary shadow">
+                <img  class="card-img-top" src="./images/cameras/vcam_3.jpg" alt="Camera">
+                <div class="card-body">
+                   <h5 class="card-title">Camera Name</h5>
+                   <p class="card-text">Camera description</p>
+                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-4">
+            <div class="card h-100 text-center border-primary shadow">
+                <img  class="card-img-top" src="./images/cameras/vcam_4.jpg" alt="Camera">
+                <div class="card-body">
+                   <h5 class="card-title">Camera Name</h5>
+                   <p class="card-text">Camera description</p>
+                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-4">
+            <div class="card h-100 text-center border-primary shadow">
+                <img  class="card-img-top" src="./images/cameras/vcam_5.jpg" alt="Camera">
+                <div class="card-body">
+                   <h5 class="card-title">Camera Name</h5>
+                   <p class="card-text">Camera description</p>
+                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="container-fluid bg-primary py-4">
+    <div class="row">
+        <div class="col">
+            <ul class="list-inline text-center">
+                <li class="list-inline-item"><a href="#">A propos</a></li>
+                <li class="list-inline-item">&middot;</li>
+                <li class="list-inline-item"><a href="#">Vie privée</a></li>
+                <li class="list-inline-item">&middot;</li>
+                <li class="list-inline-item"><a href="#">Conditions d'utilisations</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
 </body>
 </html>
