Automatize the item creation on the home page
Automatize item creation, add picture on the product page.

--- a/index.html
+++ b/index.html
@@ -34,56 +34,7 @@
 
 <main class="container my-5">
     <div class="row">
-        <div class="col-12 col-lg-4 mb-4">
-            <div class="card h-100 text-center px-auto border-primary shadow">
-                <img  class="card-img-top" src="" alt="Camera">
-                <div class="card-body">
-                   <h5 class="card-title">Camera Name</h5>
-                   <p class="card-text">Camera description</p>
-                   <a class="btn btn-primary stretched-link" href="produit.html?id=value1" role="button">Détails du produit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-4">
-            <div class="card h-100 text-center border-primary shadow">
-                <img  class="card-img-top" src="" alt="Camera">
-                <div class="card-body">
-                   <h5 class="card-title">Camera Name</h5>
-                   <p class="card-text">Camera description</p>
-                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-4">
-            <div class="card h-100 text-center border-primary shadow">
-                <img  class="card-img-top" src="" alt="Camera">
-                <div class="card-body">
-                   <h5 class="card-title">Camera Name</h5>
-                   <p class="card-text">Camera description</p>
-                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-4">
-            <div class="card h-100 text-center border-primary shadow">
-                <img  class="card-img-top" src="" alt="Camera">
-                <div class="card-body">
-                   <h5 class="card-title">Camera Name</h5>
-                   <p class="card-text">Camera description</p>
-                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-4">
-            <div class="card h-100 text-center border-primary shadow">
-                <img  class="card-img-top" src="" alt="Camera">
-                <div class="card-body">
-                   <h5 class="card-title">Camera Name</h5>
-                   <p class="card-text">Camera description</p>
-                   <a class="btn btn-primary stretched-link" href="produit.html" role="button">Détails du produit</a>
-                </div>
-            </div>
-        </div>
+        <!-- Contenu créé automatiquement en JS -->
     </div>
 </main>
 
