Add product to localStorage
Use addEventListener and localStorage API

--- a/produit.html
+++ b/produit.html
@@ -16,7 +16,7 @@
 <body>
 <header class="container-fluid bg-primary">
     <div class="row">
-        <nav class="col navbar navbar-light">
+        <nav class="col navbar navbar-light mx-md-4">
             <a class="navbar-brand" href="index.html">
                 <img src="./images/logo-orinoco.png" alt="Site logo" width="200" height="95">
             </a>
@@ -62,9 +62,8 @@
                 </select>
             </div>
 
-            <button class="btn btn-primary">Ajouter au panier</button>
+            <button id="addToCart" class="btn btn-primary">Ajouter au panier</button>
           </form>
-          
         </section>
     </div>
 </main>
