Add Post request
Add a form, a form validation and the post request

--- a/produit.html
+++ b/produit.html
@@ -7,7 +7,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./produit.js"></script>
+    <script type="text/javascript" src="./js/utils.js"></script>
+    <script type="text/javascript" src="./js/produit.js"></script>
 
 
     <title>Orinoco</title>  
@@ -59,6 +60,11 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>
 
