--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <script type="text/javascript" src="./js/utils.js"></script>
     <script type="text/javascript" src="./index.js"></script>
 
 
