--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/ae53c87fa4.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./panier.js"></script>
+    <script type="text/javascript" src="./js/utils.js"></script>
+    <script type="text/javascript" src="./js/panier.js"></script>
 
 
     <title>Orinoco</title>  
@@ -66,10 +67,50 @@
               </table>
         </div>
     </div>
-    <div class="row my-5">
-        <div class="col-0 col-sm-7"></div>
+    <div class="row my-5 flex-row-reverse">
         <div class="col-12 col-sm-5 text-center text-sm-end">
-            <p id="total" class="border border-secondary border-4 py-3"></p>
+            <p id="total" class="border border-4 border-secondary py-3 bg-primary fw-bold"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-8">
+            <h2>Informations Personnelles :</h2>
+            <form class="d-flex flex-column" id="contact-form" action="#">
+                <div class="form-group mb-3">
+                    <label for="lastNameInput" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="lastNameInput" required>
+                    <div class="feedback"></div>
+                </div>
+                <div class="form-group mb-3">
+                  <label for="firstNameInput" class="form-label">Prénom</label>
+                  <input type="text" class="form-control" id="firstNameInput" required>
+                  <div class="feedback"></div>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="addressInput" class="form-label">Adresse</label>
+                    <input type="text" class="form-control" id="addressInput" placeholder="Numéro, Voie, Appartement, Etage ..." required>
+                    <div class="feedback"></div>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="cityInput" class="form-label">Ville</label>
+                    <input type="text" class="form-control" id="cityInput" required>
+                    <div class="feedback"></div>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="emailInput" class="form-label">Mail</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="name@exemple" required>
+                    <div class="feedback"></div>
+                </div>
+
+                <div class="form-group mb-3 form-check">
+                    <input class="form-check-input" type="checkbox" id="conditionsCheck" required>
+                    <label class="form-check-label" for="conditionsCheck">
+                        J'accepte les termes et conditions.
+                    </label>
+                    <div class="feedback"></div>
+                </div>
+                <button id="valider" type="submit" value="Ok" class="btn btn-primary align-self-center mt-3">Valider la commande</button>
+              </form>
         </div>
     </div>
 </main>
