Display order validation, remove item from cart
display the order validation page with the order number, remove an item from the cart 'onClick'

--- a/commande.html
+++ b/commande.html
@@ -32,7 +32,41 @@
     </header>
 
     <main class="container my-5">
-
+        <div class="row">
+            <div class="col"> <h1>Commande validée</h1></div>
+        </div>
+        <div class="row my-5 text-justify">
+            <div class="col">
+                <p id="order-validation"></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <table class="table table-sm text-center">
+                    <thead>
+                      <tr>
+                        <th scope="col">Produit</th>
+                        <th scope="col">Quantité</th>
+                        <th scope="col">Prix</th>
+                        <th scope="col">Total</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col border border-4 border-secondary py-3 bg-primary fw-bold">
+                <p class="">
+                    Vous recevrez une notification une fois la commande prête. La livraison prends ensuite entre 3 à 5 jours ouvrés.
+                </p>
+                <a href="#" class ="text-secondary text-center"><strong>-- Suivre mon colis --</strong></a>
+            </div>
+            <div class="col">
+                <p id="total" class="border border-4 border-secondary py-3 bg-primary fw-bold"></p>
+            </div>
+        </div>
     </main>
 
     <footer class="container-fluid bg-primary py-4">
