PopUp when item added to cart
Add a popUp when an article is added to cart

--- a/commande.html
+++ b/commande.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="container my-5">
-        <div class="row">
+        <div class="row d-flex justify-content-center">
             <div class="col"> <h1>Commande validée</h1></div>
         </div>
         <div class="row my-5 text-justify">
@@ -56,15 +56,15 @@
                   </table>
             </div>
         </div>
-        <div class="row my-5">
-            <div class="col border border-4 border-secondary py-3 bg-primary fw-bold">
+        <div class="row my-2 p-4 d-flex flex-column-reverse flex-sm-row">
+            <div class="col border border-4 border-secondary py-3 bg-primary">
                 <p class="">
                     Vous recevrez une notification une fois la commande prête. La livraison prends ensuite entre 3 à 5 jours ouvrés.
                 </p>
                 <a href="#" class ="text-secondary text-center"><strong>-- Suivre mon colis --</strong></a>
             </div>
             <div class="col">
-                <p id="total" class="border border-4 border-secondary py-3 bg-primary fw-bold"></p>
+                <p id="total" class="border border-4 border-secondary p-3 bg-secondary h4"></p>
             </div>
         </div>
     </main>
