--- a/panier.html
+++ b/panier.html
@@ -67,9 +67,9 @@
               </table>
         </div>
     </div>
-    <div class="row my-5 flex-row-reverse">
+    <div class="row my-2 flex-row-reverse">
         <div class="col-12 col-sm-5 text-center text-sm-end">
-            <p id="total" class="border border-4 border-secondary py-3 bg-primary fw-bold"></p>
+            <p id="total" class="border border-4 border-secondary p-3 bg-secondary h4"></p>
         </div>
     </div>
     <div class="row">
