--- a/produit.html
+++ b/produit.html
@@ -64,6 +64,44 @@
           </form>
         </section>
     </div>
+    <div id="myPopUp" class="modal" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header d-flex justify-content-center">
+              <h5 class="modal-title text-secondary">Article ajouté au panier! <i class="far fa-smile-beam "></i></h5>
+            </div>
+            <div class="modal-body">
+              <p>Bravo! Vous avez ajouté un nouvel article à votre panier!</br>
+                Cliquer ci-dessous pour continuer vos achats ou consulter votre panier.</p>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <a href="index.html" role="button" class="btn btn-primary">Continuer mes achats!</a>
+                <a href="panier.html" role="button" class="btn btn-secondary">Voir mon panier</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- <div id="myPopUp" class="border border-secondary p-2" width="250px" height="200px">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-secondary">Article ajouté au panier! <i class="far fa-smile-beam "></i></h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Bravo! Vous avez ajouté un nouvel article à votre panier!</br>
+                    Cliquer ci-dessous pour continuer vos achats ou consulter votre panier.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <a href="index.html" role="button" class="btn btn-primary">Continuer mes achats!</a>
+            </div>
+            <div class="col-6">
+                <a href="panier.html" role="button" class="btn btn-secondary">Voir mon panier</a>
+            </div>
+        </div>
+    </div> -->
 </main>
 
 <footer class="container-fluid bg-primary py-4">
