--- a/produit.html
+++ b/produit.html
@@ -8,8 +8,8 @@
     <!-- CSS -->
     <script src="https://kit.fontawesome.com/ae53c87fa4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/utils.js"></script>
-    <script type="text/javascript" src="./js/produit.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./js/produit.js"></script>
 
 
     <title>Orinoco</title>  
@@ -37,7 +37,7 @@
 <main class="container my-5">
     <div class="row">
       <div id="image-container" class="col-12 col-md-6">
-        <img id="img-camera" class="img-fluid" src="" alt="Camera">
+        <!--Image added with JS-->
       </div>
       <section class="col-12 col-md-6">
           <div id="camera-informations">
@@ -71,7 +71,7 @@
               <h5 class="modal-title text-secondary">Article ajouté au panier! <i class="far fa-smile-beam "></i></h5>
             </div>
             <div class="modal-body">
-              <p>Bravo! Vous avez ajouté un nouvel article à votre panier!</br>
+              <p>Bravo! Vous avez ajouté un nouvel article à votre panier!<br>
                 Cliquer ci-dessous pour continuer vos achats ou consulter votre panier.</p>
             </div>
             <div class="modal-footer d-flex justify-content-center">
@@ -81,27 +81,6 @@
           </div>
         </div>
       </div>
-    <!-- <div id="myPopUp" class="border border-secondary p-2" width="250px" height="200px">
-        <div class="row">
-            <div class="col">
-                <h1 class="text-secondary">Article ajouté au panier! <i class="far fa-smile-beam "></i></h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Bravo! Vous avez ajouté un nouvel article à votre panier!</br>
-                    Cliquer ci-dessous pour continuer vos achats ou consulter votre panier.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <a href="index.html" role="button" class="btn btn-primary">Continuer mes achats!</a>
-            </div>
-            <div class="col-6">
-                <a href="panier.html" role="button" class="btn btn-secondary">Voir mon panier</a>
-            </div>
-        </div>
-    </div> -->
 </main>
 
 <footer class="container-fluid bg-primary py-4">
