--- a/commande.html
+++ b/commande.html
@@ -7,8 +7,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/utils.js"></script>
-    <script type="text/javascript" src="./js/commande.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./js/commande.js"></script>
 
     <title>Orinoco</title>   
 </head>
