--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/utils.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./index.js"></script>
 
 
     <title>Orinoco</title>  
