--- a/commande.html
+++ b/commande.html
@@ -2,6 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="e-commerce, camera, camera vintage, boutique en ligne, appareil photo">
+	<meta name="title" content="Orinoco - Camera Vintage">
+    <meta name="description" content="Orinoco est une entreprise de commerce en ligne. Elle se démarque des grands site e-commerce en créant des applications thématiques ne vendant qu’un seul groupe de produits. Ici il s'agit d'Oricam une application dédiée à la vente d'appareils photo vintage.">
+    <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" sizes="144x144" href="./images/favicon.png">
 
