--- a/panier.html
+++ b/panier.html
@@ -92,27 +92,27 @@
                     <div class="form-group mb-3">
                         <label for="lastNameInput" class="form-label">Nom</label>
                         <input type="text" class="form-control" id="lastNameInput" required>
-                        <div class="feedback alert alert-danger">Ce champ est obligatoire</div>
+                        <div class="feedback alert alert-danger">Précisez votre nom. Ce champ n'accepte que des lettres. En cas de nom composé vous pouvez utiliser un tiret.</div>
                     </div>
                     <div class="form-group mb-3">
                       <label for="firstNameInput" class="form-label">Prénom</label>
                       <input type="text" class="form-control" id="firstNameInput" required>
-                      <div class="feedback alert alert-danger">Ce champ est obligatoire</div>
+                      <div class="feedback alert alert-danger">Précisez votre prénom. Ce champ n'accepte que des lettres. En cas de prénom composé vous pouvez utiliser un tiret.</div>
                     </div>
                     <div class="form-group mb-3">
                         <label for="addressInput" class="form-label">Adresse</label>
                         <input type="text" class="form-control" id="addressInput" placeholder="Numéro, Voie, Appartement, Etage ..." required>
-                        <div class="feedback alert alert-danger">Ce champ est obligatoire</div>
+                        <div class="feedback alert alert-danger">Précisez votre adresse. Elle doit contenir des chiffres et des lettres, accents autorisés.</div>
                     </div>
                     <div class="form-group mb-3">
                         <label for="cityInput" class="form-label">Ville</label>
                         <input type="text" class="form-control" id="cityInput" required>
-                        <div class="feedback alert alert-danger">Ce champ est obligatoire</div>
+                        <div class="feedback alert alert-danger">Précisez la ville. Ce champ n'accepte que des lettres.</div>
                     </div>
                     <div class="form-group mb-3">
                         <label for="emailInput" class="form-label">Mail</label>
                         <input type="email" class="form-control" id="emailInput" placeholder="name@exemple" required>
-                        <div class="feedback alert alert-danger">Votre email doit être de la forme name@exemple</div>
+                        <div class="feedback alert alert-danger">Précisez votre email. Il doit être de la forme name@exemple</div>
                     </div>
     
                     <div class="form-group mb-3 form-check">
